# pymupdf_qt_viewer

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
pymupdf_qt_viewer/: pymupdfviewer.py
