[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymupdf_qt_viewer"
description = "PDF viewer build on Pymupdf and PyQt6"
version = "0.2"
authors = [
  {name = "Debruycker Vincent", email = ""}
]
maintainers = [
  {name = "Debruycker Vincent", email = ""}
]
dependencies = [
    "pyqt6 (>=6.8.1,<7.0.0)"
]

[tool.hatch.build]
include = [
  "pymupdf_qt_viewer/**/*.py"
]